--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "@mdi/font": "^7.3.67",
         "@vitejs/plugin-vue": "^4.4.0",
         "admin-lte": "3.2",
-        "vue-router": "^4.2.5"
+        "vue-router": "^4.2.5",
+        "vuetify": "^3.3.20"
     }
 }
