--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
         "@mdi/font": "^7.3.67",
         "@vitejs/plugin-vue": "^4.4.0",
         "admin-lte": "3.2",
+        "jquery": "^3.7.1",
+        "vee-validate": "^4.11.8",
         "vue-router": "^4.2.5",
-        "vuetify": "^3.3.20"
+        "vuetify": "^3.3.20",
+        "yup": "^1.3.2"
     }
 }
