--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "@headlessui/vue": "^1.7.16",
         "@mdi/font": "^7.3.67",
         "@vitejs/plugin-vue": "^4.4.0",
         "admin-lte": "3.2",
