--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
         "@vitejs/plugin-vue": "^4.4.0",
         "admin-lte": "3.2",
         "jquery": "^3.7.1",
+        "laravel-vue-pagination": "^4.1.1",
+        "lodash": "^4.17.21",
         "moment": "^2.29.4",
         "vee-validate": "^4.11.8",
         "vue-router": "^4.2.5",
