--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "lodash": "^4.17.21",
         "moment": "^2.29.4",
         "vee-validate": "^4.11.8",
+        "vue": "^3.2.37",
         "vue-router": "^4.2.5",
         "vuetify": "^3.3.20",
         "yup": "^1.3.2"
