--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "laravel-vue-pagination": "^4.1.1",
         "lodash": "^4.17.21",
         "moment": "^2.29.4",
+        "pinia": "^2.1.7",
         "vee-validate": "^4.11.8",
         "vue": "^3.2.37",
         "vue-router": "^4.2.5",
