--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@headlessui/vue": "^1.7.16",
         "@mdi/font": "^7.3.67",
         "@vitejs/plugin-vue": "^4.4.0",
+        "@vueuse/core": "^10.5.0",
         "admin-lte": "3.2",
         "jquery": "^3.7.1",
         "laravel-vue-pagination": "^4.1.1",
